<resources>
    <string name="app_name">Covid 19 Tracker</string>
    <string name="title_stats">Stats</string>
    <string name="title_stats_header">World Covid19 Stats Update At A Glance</string>
    <string name="title_countries">Countries</string>
    <string name="title_continents">Continents</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status_image">Status Image</string>
    <string name="active_cases">Active</string>
    <string name="critical_cases">Critical</string>
    <string name="deaths">Deaths</string>
    <string name="recovered_cases">Recovered</string>
    <string name="test_string">Testing</string>
    <string name="email">Email</string>
    <string name="medium">Medium</string>
    <string name="linkedin">LinkedIn</string>
    <string name="github">Github</string>
    <string name="developer">Developer</string>
    <string name="cases">Cases</string>
    <string name="population">Population</string>
    <string name="today_deaths">Today Deaths</string>
    <string name="today_cases">Today Cases</string>
    <string name="today_recoveries">Today Recoveries</string>
</resources>