<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/statisticsFragment">
    <fragment
        android:id="@+id/countriesFragment"
        android:name="com.labyonandroid.covidtracker.ui.countries.CountriesFragment"
        android:label="@string/title_countries"
        tools:layout="@layout/fragment_countries" >
        <action
            android:id="@+id/action_countriesFragment_to_statisticsFragment"
            app:destination="@id/statisticsFragment"
            app:popUpTo="@id/statisticsFragment"
            app:enterAnim="@anim/slide_right_anim"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.labyonandroid.covidtracker.ui.stats.StatisticsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_statistics" />
    <fragment
        android:id="@+id/continentsFragment"
        android:name="com.labyonandroid.covidtracker.ui.continents.ContinentsFragment"
        android:label="@string/title_continents"
        tools:layout="@layout/fragment_continents">

        <action
            app:popUpTo="@id/statisticsFragment"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/slide_right_anim"
            android:id="@+id/action_continentsFragment_to_statisticsFragment"
            app:destination="@id/statisticsFragment" />
    </fragment>
</navigation>