<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="property"
            type="com.labyonandroid.covidtracker.model.ContinentData" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/continent_content_card"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="15dp"
            android:clipToPadding="false"
            android:padding="5dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/continent_header"
                    style="@style/data_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@{property.continent}"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.609"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/cases_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cases"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/deaths_header"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/continent_header"
                    app:layout_constraintVertical_bias="0.077" />

                <TextView
                    android:id="@+id/deaths_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deaths"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/active_header"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/cases_header"
                    app:layout_constraintTop_toTopOf="@+id/cases_header"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/active_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/active_cases"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/deaths_header"
                    app:layout_constraintTop_toTopOf="@+id/deaths_header"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/cases_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{property.cases}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/deaths_text"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cases_header"
                    app:layout_constraintVertical_bias="0.062" />

                <TextView
                    android:id="@+id/deaths_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{property.deaths}"
                    app:layout_constraintBottom_toBottomOf="@+id/cases_text"
                    app:layout_constraintEnd_toStartOf="@+id/active_text"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/cases_text"
                    app:layout_constraintTop_toTopOf="@+id/cases_text" />

                <TextView
                    android:id="@+id/active_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{property.active}"
                    app:layout_constraintBottom_toBottomOf="@+id/deaths_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/deaths_text"
                    app:layout_constraintTop_toTopOf="@+id/deaths_text" />

                <TextView
                    android:id="@+id/population"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/population"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/recovered"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cases_text"
                    app:layout_constraintVertical_bias="0.127" />

                <TextView
                    android:id="@+id/recovered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recovered_cases"
                    app:layout_constraintBottom_toBottomOf="@+id/population"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/population"
                    app:layout_constraintTop_toTopOf="@+id/population" />

                <TextView
                    android:id="@+id/population_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{property.population}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/recovered_text"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/population"
                    app:layout_constraintVertical_bias="0.075" />

                <TextView
                    android:id="@+id/recovered_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{property.recovered}"
                    app:layout_constraintBottom_toBottomOf="@+id/population_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/population_text"
                    app:layout_constraintTop_toTopOf="@+id/population_text" />

                <TextView
                    android:id="@+id/today_cases_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_cases"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/today_deaths_header"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/population_text"
                    app:layout_constraintVertical_bias="0.208" />

                <TextView
                    android:id="@+id/today_deaths_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_deaths"
                    app:layout_constraintBottom_toBottomOf="@+id/today_cases_header"
                    app:layout_constraintEnd_toStartOf="@+id/today_recoveries_header"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/today_cases_header"
                    app:layout_constraintTop_toTopOf="@+id/today_cases_header" />

                <TextView
                    android:id="@+id/today_recoveries_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_recoveries"
                    app:layout_constraintBottom_toBottomOf="@+id/today_deaths_header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/today_deaths_header"
                    app:layout_constraintTop_toTopOf="@+id/today_deaths_header" />

                <TextView
                    android:id="@+id/today_cases_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{property.todayCases}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/today_deaths_text"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/today_cases_header"
                    app:layout_constraintVertical_bias="0.18" />

                <TextView
                    android:id="@+id/today_deaths_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{property.todayDeaths}"
                    app:layout_constraintBottom_toBottomOf="@+id/today_cases_text"
                    app:layout_constraintEnd_toStartOf="@+id/today_recoveries_text"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/today_cases_text"
                    app:layout_constraintTop_toTopOf="@+id/today_cases_text" />

                <TextView
                    android:id="@+id/today_recoveries_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{property.todayRecovered}"
                    app:layout_constraintBottom_toBottomOf="@+id/today_deaths_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/today_deaths_text"
                    app:layout_constraintTop_toTopOf="@+id/today_deaths_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>