<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="property"
            type="com.labyonandroid.covidtracker.model.AllCountryData" />

        <variable
            name="countriesViewModel"
            type="com.labyonandroid.covidtracker.ui.countries.CountriesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/country_content_card"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="15dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="8dp"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toTopOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.207">

                <TextView
                    android:id="@+id/country_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{property.country}"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintVertical_bias="0.100"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/cases_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cases"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/deaths_text"
                    app:layout_constraintHorizontal_bias="0.387"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/country_name"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/cases_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{property.cases}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.212"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cases_header"
                    app:layout_constraintVertical_bias="0.056" />

                <TextView
                    android:id="@+id/deaths_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deaths"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.318"
                    app:layout_constraintStart_toEndOf="@+id/cases_header"
                    app:layout_constraintTop_toTopOf="@+id/cases_header"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/deaths_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{property.deaths}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/deaths_header"
                    app:layout_constraintVertical_bias="0.056" />

                <TextView
                    android:id="@+id/active_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/active_cases"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.63"
                    app:layout_constraintStart_toEndOf="@+id/deaths_header"
                    app:layout_constraintTop_toTopOf="@+id/deaths_header"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/active_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{property.active}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.835"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/active_header"
                    app:layout_constraintVertical_bias="0.056" />

                <TextView
                    android:id="@+id/recovered_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/recovered_cases"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.285"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.44" />

                <TextView
                    android:id="@+id/recovered_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{property.recovered}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/population_text"
                    app:layout_constraintHorizontal_bias="0.47"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recovered_header"
                    app:layout_constraintVertical_bias="0.097" />

                <TextView
                    android:id="@+id/population_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/population"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.48"
                    app:layout_constraintStart_toEndOf="@+id/recovered_header"
                    app:layout_constraintTop_toTopOf="@+id/recovered_header"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/population_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{property.population}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.706"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/population_header"
                    app:layout_constraintVertical_bias="0.111" />

                <TextView
                    android:id="@+id/today_cases_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_cases"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.082"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.748" />

                <TextView
                    android:id="@+id/today_cases_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{property.todayCases}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.154"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/today_cases_header"
                    app:layout_constraintVertical_bias="0.25" />

                <TextView
                    android:id="@+id/today_deaths_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Today Deaths"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.18"
                    app:layout_constraintStart_toEndOf="@+id/today_cases_header"
                    app:layout_constraintTop_toTopOf="@+id/today_cases_header"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/today_deaths_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{property.todayDeaths}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.377"
                    app:layout_constraintStart_toEndOf="@+id/today_cases_text"
                    app:layout_constraintTop_toTopOf="@+id/today_cases_text"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/today_recoveries_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_recoveries"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.513"
                    app:layout_constraintStart_toEndOf="@+id/today_deaths_header"
                    app:layout_constraintTop_toTopOf="@+id/today_deaths_header"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/today_recoveries_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{property.todayRecovered}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.557"
                    app:layout_constraintStart_toEndOf="@+id/today_deaths_text"
                    app:layout_constraintTop_toTopOf="@+id/today_deaths_text"
                    app:layout_constraintVertical_bias="0.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>